fix: adjust width of student item logo for better alignment

--- a/src/components/SearchPage/StudentItem.css
+++ b/src/components/SearchPage/StudentItem.css
@@ -7,7 +7,7 @@
 }
 
 .studentItemLogo {
-  width: 45px;
+  width: 42px;
   height: auto;
 }
 
